style: extend primary color

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,4 +1,4 @@
-<footer class="h-fit bg-[#1a554b] p-8 text-white space-y-4 text-center">
+<footer class="h-fit bg-primary-800 p-8 text-white space-y-4 text-center">
 	<div>
 		<p class="font-bold mb-2 text-xl">tidytrek</p>
 		<p class="font-mono text-xs">made in durango, colorado</p>
