--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -1,4 +1,4 @@
-<nav class="bg-[#1d8471] h-24 flex items-center p-12">
+<nav class="bg-primary-600 h-24 flex items-center p-12">
 	<h1 class="text-white font-semibold text-2xl">
 		<a href="/"> tidytrek</a>
 	</h1>
