--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,12 +4,12 @@ import MainLayout from '../layouts/main-layout.astro';
 
 <MainLayout>
 	<div
-		class="flex justify-center items-center flex-col h-[calc(100vh-theme(spacing.24))] bg-gradient-to-t from-[#f2fbf8] to-[#d1f6ea] space-y-8">
+		class="flex justify-center items-center flex-col h-[calc(100vh-theme(spacing.24))] bg-gradient-to-t from-primary-50 to-primary-100 space-y-8">
 		<h1 class="text-5xl md:text-6xl font-bold leading-tighter tracking-tighter font-heading dark:text-black">
 			Keep your pack tidy on all of your adventures.
 		</h1>
 		<p class="text-xl">used by backpackers, travelers, artists & more</p>
-		<button class="text-[#1d8471] border-2 border-[#1d8471] w-fit px-4 py-2 mt-8 rounded">
+		<button class="text-primary-600 border-2 border-primary-600 w-fit px-4 py-2 mt-8 rounded">
 			<a href="https://tidytrek.co/register" rel="noopener noreferrer">Sign Up For Free</a>
 		</button>
 	</div>
