style: add ridge svg to hero section

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,6 +1,15 @@
-<footer class="h-fit bg-primary-800 p-8 text-white space-y-4 text-center">
+<footer>
 	<div>
-		<p class="font-bold mb-2 text-xl">tidytrek</p>
-		<p class="font-mono text-xs">made in durango, colorado</p>
+		<!-- <p>tidytrek</p>
+		<p>made in durango, colorado</p> -->
 	</div>
 </footer>
+
+<style>
+	footer {
+		background-color: var(--primary-900);
+		border: 0px;
+		margin: 0px;
+		height: 10vh;
+	}
+</style>
