--- a/src/layouts/main-layout.astro
+++ b/src/layouts/main-layout.astro
@@ -1,4 +1,8 @@
 ---
+import '../styles/reset.css';
+import '../styles/theme.css';
+import '../styles/components.css';
+
 import Navbar from '~/components/navbar.astro';
 import Footer from '~/components/footer.astro';
 import favIcon from '~/../public/favicon.ico';
