--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -1,11 +1,27 @@
-<nav class="bg-primary-600 h-24 flex items-center p-12">
-	<h1 class="text-white font-semibold text-2xl">
+<nav>
+	<h2>
 		<a href="/"> tidytrek</a>
-	</h1>
-	<div class="ml-auto space-x-12">
-		<button class="text-white rounded"><a href="https://tidytrek.co/login" rel="noopener noreferrer">Login</a></button>
-		<button class="text-white rounded border-2 px-2 py-1">
+	</h2>
+	<div class="auth-button-container">
+		<button class="button--outline"><a href="https://tidytrek.co/login" rel="noopener noreferrer">Login</a></button>
+		<button class="button--outline">
 			<a href="https://tidytrek.co/register" rel="noopener noreferrer">Sign Up</a></button
 		>
 	</div>
 </nav>
+
+<style>
+	nav {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		padding: 1rem 5rem;
+		background: var(--primary-100);
+	}
+
+	.auth-button-container {
+		button {
+			margin: 0px 25px;
+		}
+	}
+</style>
