--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,14 +3,87 @@ import MainLayout from '../layouts/main-layout.astro';
 ---
 
 <MainLayout>
-	<div
-		class="flex justify-center items-center flex-col px-8 h-[calc(100vh-theme(spacing.24))] bg-gradient-to-t from-primary-50 to-primary-100 space-y-8">
-		<h1 class="text-5xl md:text-6xl font-bold leading-tighter tracking-tighter font-heading dark:text-black">
-			Keep your pack tidy for all of your adventures.
-		</h1>
-		<p class="text-xl">Used by backpackers, travelers, artists & more</p>
-		<button class="text-primary-600 border-2 border-primary-600 w-fit px-4 py-2 mt-8 rounded">
-			<a href="https://tidytrek.co/register" rel="noopener noreferrer">Sign Up For Free</a>
-		</button>
+	<div id="container">
+		<main>
+			<div class="ridge-container">
+				<div id="result"></div>
+				<div class="content"></div>
+				<div class="filler"></div>
+				<section id="hero">
+					<h1 class="">Keep your pack tidy for all of your adventures.</h1>
+					<p>Used by backpackers, travelers, artists & more</p>
+					<button>
+						<a href="https://tidytrek.co/register" rel="noopener noreferrer">Sign Up Now</a>
+					</button>
+				</section>
+			</div>
+		</main>
 	</div>
+
+	<script src="../scripts/ridges.js"></script>
 </MainLayout>
+
+<script src="../scripts/ridges.js"></script>
+
+<style>
+	div.ridge-container {
+		width: 100%;
+		display: grid;
+		grid-template-rows: 1fr auto auto 1fr;
+		min-height: 50vh;
+		background: var(--primary-100);
+		color: var(--primary-700);
+		font-size: 0px;
+	}
+
+	#result {
+		grid-row: 2;
+	}
+
+	svg {
+		display: block;
+	}
+
+	.content {
+		background: var(--primary-700);
+		grid-row: 3;
+		padding-top: 4rem;
+		padding-bottom: 2rem;
+		text-align: center;
+	}
+
+	.filler {
+		background: var(--primary-700);
+		grid-row: 4;
+	}
+
+	#container {
+		height: 100%;
+		position: relative;
+	}
+
+	main {
+		height: 100%;
+		display: flex;
+		justify-content: center;
+	}
+
+	#hero {
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+		justify-content: center;
+		height: 40vh;
+	}
+
+	@media screen and (max-width: 768px) {
+		#container {
+			display: flex;
+			flex-direction: column;
+		}
+
+		#hero {
+			display: block;
+		}
+	}
+</style>
