--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -4,7 +4,7 @@ import MainLayout from '../layouts/main-layout.astro';
 
 <MainLayout title="404 - Page Not Found">
 	<section id="fourohfour-hero" class="bg-primary h-screen flex items-center justify-center">
-		<div class="message-box flex items-center justify-center flex-col text-center p-xl text-primary">
+		<div class="message-box flex items-center justify-center flex-col text-center p-8 text-primary">
 			<h1>404</h1>
 			<h2>You went off trail!</h2>
 			<p>The page you were looking for wasn't found.</p>
