feat: og-tag image

--- a/src/layouts/main-layout.astro
+++ b/src/layouts/main-layout.astro
@@ -31,7 +31,9 @@ type Props = {
 		<meta property="og:title" content={`${SITE_TITLE} - ${title}`} />
 		<meta property="og:description" content={SITE_DESCRIPTION} />
 		<meta property="og:type" content="website" />
+		<meta property="og:image" content="https://tidytrek.co/landing/tidytrek-og.png" />
 		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:image" content="https://tidytrek.co/landing/tidytrek-og.png" />
 
 		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
