--- a/src/layouts/main-layout.astro
+++ b/src/layouts/main-layout.astro
@@ -42,14 +42,20 @@ type Props = {
 		<link rel="manifest" href="/manifest.json" />
 		<meta name="theme-color" content="#338866" />
 
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap" rel="stylesheet" />
+
 		<script src="/src/scripts/theme.js"></script>
 
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-VX2NGYBNRV"></script>
 		<script>
 			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+
 			// only initialize if user accepted cookies
 			const consent = localStorage.getItem('cookie-consent');
 			if (consent === 'accepted') {
@@ -57,9 +63,8 @@ type Props = {
 				gtag('config', 'G-VX2NGYBNRV');
 			}
 
-
 			// function for cookie consent to call
-			window.initializeTidytrekAnalytics = function() {
+			window.initializeTidytrekAnalytics = function () {
 				gtag('js', new Date());
 				gtag('config', 'G-VX2NGYBNRV');
 			};
